# JIPP2

./: CMakeLists.txt
Projekt2/: CMakeLists.txt
Projekt2/include/: employee.h  employer.h  person.h
Projekt2/src/: Register.cpp  Register.h  employee.cpp  employee.h  employer.cpp  employer.h  main.cpp  person.cpp  person.h
Samochody/: CMakeLists.txt
Samochody/src/: class1.cpp  class1.h  main.cpp
SimpleCalc/: CMakeLists.txt
SimpleCalc/include/: calc.h
SimpleCalc/src/: calc.cpp  main.cpp
Zadanie2911/: CMakeLists.txt
Zadanie2911/src/: class.cpp  class.h  main.cpp
Zadanko1_2510/: CMakeLists.txt
Zadanko1_2510/src/: klasa.cpp  klasa.h  main.cpp
Zadanko_klasy/: CMakeLists.txt
Zadanko_klasy/src/: klasa.cpp  klasa.h  main.cpp
allocation_basics/: main.cpp
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
jipp1001/: CMakeLists.txt
jipp1001/src/: class1.cpp  class1.h  main.cpp
matrixApp/: CMakeLists.txt  main.cpp
matrixLib/include/: lib.h
matrixLib/src/: lib.cpp
zadanie1701/include/: TimeMeasure.h
zadanie1701/src/: TimeMeasure.cpp  main.cpp
