cmake_minimum_required(VERSION 3.16)

add_subdirectory(allocation_basics)

add_subdirectory(SimpleCalc)

add_subdirectory(firstLib)

add_subdirectory(firstLibCall)

add_subdirectory(Zadanko1_2510)

add_subdirectory(Samochody)

add_subdirectory(Zadanko_klasy)

add_subdirectory(matrixLib)

add_subdirectory(matrixApp)

add_subdirectory(Zadanie2911)

add_subdirectory(Projekt2)

add_subdirectory(jipp1001)